# piper

./: CMakeLists.txt  piper-phonemize.patch
